--- a/crack_detection.ipynb
+++ b/crack_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "8c28ffa2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,10 @@
     "import os, json, glob\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "from PIL import Image, ImageDraw"
+    "from PIL import Image, ImageDraw\n",
+    "import cv2\n",
+    "import random\n",
+    "import shutil"
    ]
   },
   {
@@ -107,13 +110,13 @@
     "pattern = \"*.json\"\n",
     "\n",
     "# Train\n",
-    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/dacl10k_v2_devphase/annotations/train\"\n",
+    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/annotations/train\"\n",
     "out_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/train\"\n",
     "batch_clean_annotation(in_ann_dir, out_ann_dir, pattern)\n",
     "\n",
     "# Validation\n",
-    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/dacl10k_v2_devphase/annotations/validation\"\n",
-    "out_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/validation\"\n",
+    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/annotations/test\"\n",
+    "out_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/test\"\n",
     "batch_clean_annotation(in_ann_dir, out_ann_dir, pattern)"
    ]
   },
@@ -184,7 +187,7 @@
     "    return planes, overlap\n",
     "\n",
     "# Relevant directories and classes\n",
-    "IMAGES_DIR = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/dacl10k_v2_devphase/images/train\"\n",
+    "IMAGES_DIR = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/images/train\"\n",
     "ANNS_DIR   = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/train\"\n",
     "DEFECTS = ['Crack', 'ACrack', 'Wetspot', 'Efflorescence', 'Rust', 'Rockpocket', 'Hollowareas', 'Cavity', 'Spalling', 'Graffiti', 'Weathering', 'Restformwork', 'ExposedRebars']\n",
     "\n",
@@ -213,17 +216,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f8d75e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6935/6935 [01:01<00:00, 113.57it/s]\n",
+      "100%|██████████| 6935/6935 [00:00<00:00, 6706824.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total pixels in dataset: 29073367793\n",
+      "Ratio of overlapping pixels: 0.0315\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count total number of pixels to compute ratio\n",
+    "path = \"data/images/train\"\n",
+    "img_paths = [os.path.join(folder, file) for folder, _, files in os.walk(path) for file in files]\n",
+    "img_shapes = [cv2.imread(img_path).shape for img_path in tqdm(img_paths)]\n",
+    "img_pixels = [shape[0]*shape[1] for shape in tqdm(img_shapes)]\n",
+    "\n",
+    "print (f\"Total pixels in dataset: {sum(img_pixels)}\")\n",
+    "print (f\"Ratio of overlapping pixels: {overlap_pixels_total / sum(img_pixels):.4f}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b5239c5a",
    "metadata": {},
    "source": [
-    "**Avg DACL10K image:** $1920×1440 ≈ 2.764.800$ pixels\n",
-    "**Dataset size:** $ 6935$ images  \n",
-    "**Total pixels:** $2.764.800 \\times 6935 = 19173888000$ pixels  \n",
-    "\n",
-    "**Ratio:** $915.524.988 / 19173888000 ≈ 0.0478 → ~4.8\\%$\n",
-    "\n",
-    "Because the dataset annotations are multilabel and overlap in ~5% of pixels, we collapse overlaps to a single class using a fixed priority hierarchy. This enables consistent multiclass training and evaluation for U-Net, SegFormer, and Mask2Former. A multilabel experiment will be explored separately."
+    "Because the dataset annotations are multilabel and overlap in ~3% of pixels, we collapse overlaps to a single class using a fixed priority hierarchy. This enables consistent multiclass training and evaluation for U-Net, SegFormer, and Mask2Former. A multilabel experiment will be explored separately."
    ]
   },
   {
@@ -285,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d698e1fd",
    "metadata": {},
    "outputs": [
@@ -331,10 +369,386 @@
     "out_mask_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/train\"\n",
     "batch_convert_labelme_to_png(in_ann_dir, out_mask_dir)\n",
     "\n",
-    "# Validation\n",
-    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/validation\"\n",
-    "out_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/validation\"\n",
+    "# Test\n",
+    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/test\"\n",
+    "out_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/test\"\n",
     "batch_clean_annotation(in_ann_dir, out_ann_dir, pattern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8ef913ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Count occurrences of each label\n",
+    "LABELS = [\n",
+    "    'Crack', 'ExposedRebars', 'Spalling', 'Rust', 'ACrack',\n",
+    "    'Rockpocket', 'Hollowareas', 'Efflorescence', 'Cavity',\n",
+    "    'Wetspot', 'Weathering', 'Restformwork', 'Graffiti',\n",
+    "]\n",
+    "\n",
+    "# Function to count labels in annotations\n",
+    "def count_labels(ann_paths, LABELS):\n",
+    "\n",
+    "    # Initialize counts\n",
+    "    label_counts = {label: 0 for label in LABELS}\n",
+    "\n",
+    "    # Loop over annotations and count labels\n",
+    "    for ann_path in tqdm(ann_paths, desc=\"Counting labels\", total=len(ann_paths)):\n",
+    "        with open(ann_path, 'r', encoding='utf-8') as f:\n",
+    "            ann = json.load(f)\n",
+    "        labels_in_img = set()\n",
+    "        for shp in ann.get(\"shapes\", []):\n",
+    "            label = shp.get(\"label\", \"\")\n",
+    "            if label in LABELS:\n",
+    "                labels_in_img.add(label)\n",
+    "        for label in labels_in_img:\n",
+    "            label_counts[label] += 1\n",
+    "    \n",
+    "    return label_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a3a1cd03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Counting labels: 100%|██████████| 6935/6935 [00:00<00:00, 11014.28it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label counts in training set:\n",
+      "  Crack: 1727\n",
+      "  ExposedRebars: 773\n",
+      "  Spalling: 3262\n",
+      "  Rust: 3450\n",
+      "  ACrack: 332\n",
+      "  Rockpocket: 311\n",
+      "  Hollowareas: 1097\n",
+      "  Efflorescence: 1523\n",
+      "  Cavity: 1188\n",
+      "  Wetspot: 965\n",
+      "  Weathering: 2704\n",
+      "  Restformwork: 713\n",
+      "  Graffiti: 795\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train\n",
+    "ann_dir_train = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/train\"\n",
+    "\n",
+    "# Get all annotation paths\n",
+    "ann_paths_train = [os.path.join(ann_dir_train, sp) for sp in os.listdir(ann_dir_train)]\n",
+    "label_counts_train = count_labels(ann_paths_train, LABELS)\n",
+    "print(\"Label counts in training set:\")\n",
+    "for label, count in label_counts_train.items():\n",
+    "    print(f\"  {label}: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c130cb02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Counting labels: 100%|██████████| 975/975 [00:00<00:00, 8656.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Label counts in validation set:\n",
+      "  Crack: 254\n",
+      "  ExposedRebars: 104\n",
+      "  Spalling: 477\n",
+      "  Rust: 465\n",
+      "  ACrack: 42\n",
+      "  Rockpocket: 52\n",
+      "  Hollowareas: 155\n",
+      "  Efflorescence: 206\n",
+      "  Cavity: 167\n",
+      "  Wetspot: 144\n",
+      "  Weathering: 392\n",
+      "  Restformwork: 133\n",
+      "  Graffiti: 146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "ann_dir_test = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/test\"\n",
+    "\n",
+    "# Get all annotation paths\n",
+    "ann_paths_test = [os.path.join(ann_dir_test, sp) for sp in os.listdir(ann_dir_test)]\n",
+    "label_counts_test = count_labels(ann_paths_test, LABELS)\n",
+    "print(\"Label counts in validation set:\")\n",
+    "for label, count in label_counts_test.items():\n",
+    "    print(f\"  {label}: {count}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "99934ee5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crack: 0.1471\n",
+      "ExposedRebars: 0.1345\n",
+      "Spalling: 0.1462\n",
+      "Rust: 0.1348\n",
+      "ACrack: 0.1265\n",
+      "Rockpocket: 0.1672\n",
+      "Hollowareas: 0.1413\n",
+      "Efflorescence: 0.1353\n",
+      "Cavity: 0.1406\n",
+      "Wetspot: 0.1492\n",
+      "Weathering: 0.1450\n",
+      "Restformwork: 0.1865\n",
+      "Graffiti: 0.1836\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute ratios of validation to training counts\n",
+    "ratios = {\n",
+    "    label: label_counts_test[label] / max(1, label_counts_train[label])\n",
+    "    for label in LABELS\n",
+    "}\n",
+    "\n",
+    "# Show ratios. Split will be done so that validation set has similar distribution.\n",
+    "for label, ratio in ratios.items():\n",
+    "    print(f\"{label}: {ratio:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "95c12f36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Counting labels: 100%|██████████| 1040/1040 [00:00<00:00, 23116.71it/s]\n",
+      "Counting labels: 100%|██████████| 5895/5895 [00:00<00:00, 24325.34it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Ratios for validation to new training set:\n",
+      "  Crack: 0.1788\n",
+      "  ExposedRebars: 0.1856\n",
+      "  Spalling: 0.1763\n",
+      "  Rust: 0.1739\n",
+      "  ACrack: 0.2029\n",
+      "  Rockpocket: 0.1604\n",
+      "  Hollowareas: 0.1645\n",
+      "  Efflorescence: 0.1724\n",
+      "  Cavity: 0.1797\n",
+      "  Wetspot: 0.1812\n",
+      "  Weathering: 0.1839\n",
+      "  Restformwork: 0.1593\n",
+      "  Graffiti: 0.1691\n",
+      "\n",
+      "Final label counts in new training set:\n",
+      "  Crack: 1465\n",
+      "  ExposedRebars: 652\n",
+      "  Spalling: 2773\n",
+      "  Rust: 2939\n",
+      "  ACrack: 276\n",
+      "  Rockpocket: 268\n",
+      "  Hollowareas: 942\n",
+      "  Efflorescence: 1299\n",
+      "  Cavity: 1007\n",
+      "  Wetspot: 817\n",
+      "  Weathering: 2284\n",
+      "  Restformwork: 615\n",
+      "  Graffiti: 680\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform splitting\n",
+    "MIN = 0.13 # min ratio of val to train samples for each class\n",
+    "r = 0.15 # split ratio\n",
+    "n_val = int(len(ann_paths_train) * r)\n",
+    "\n",
+    "# Random Split with similar distribution\n",
+    "success = False\n",
+    "while not success:\n",
+    "    # Split randomly\n",
+    "    ann_paths_val = random.sample(ann_paths_train, n_val)\n",
+    "    ann_paths_new_train = [ap for ap in ann_paths_train if ap not in ann_paths_val]\n",
+    "\n",
+    "    # Count labels\n",
+    "    label_counts_val = count_labels(ann_paths_val, LABELS)\n",
+    "    label_counts_new_train = count_labels(ann_paths_new_train, LABELS)\n",
+    "\n",
+    "    # Compute ratios\n",
+    "    ratios = {\n",
+    "    label: label_counts_val[label] / max(1, label_counts_new_train[label])\n",
+    "    for label in LABELS\n",
+    "    }\n",
+    "\n",
+    "    # Check if all ratios are above MIN\n",
+    "    success = all(ratio >= MIN for ratio in ratios.values())\n",
+    "\n",
+    "    if success:\n",
+    "        print (\"\\nRatios for validation to new training set:\")\n",
+    "        for label, ratio in ratios.items():\n",
+    "            print(f\"  {label}: {ratio:.4f}\")\n",
+    "\n",
+    "print(\"\\nFinal label counts in new training set:\")\n",
+    "for label, count in label_counts_new_train.items():\n",
+    "    print(f\"  {label}: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f4d1ca7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split images, annotaitions, and masks into new train/val sets\n",
+    "train_samples = [os.path.splitext(os.path.basename(p))[0] for p in ann_paths_new_train]\n",
+    "val_samples = [os.path.splitext(os.path.basename(p))[0] for p in ann_paths_val]\n",
+    "\n",
+    "# Create validation directories\n",
+    "ann_dir_val = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/validation\"\n",
+    "mask_dir_val = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/validation\"\n",
+    "img_dir_val = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/images/validation\"\n",
+    "for dir in [ann_dir_val, mask_dir_val, img_dir_val]:\n",
+    "    os.makedirs(dir, exist_ok=True)\n",
+    "\n",
+    "# Train directories\n",
+    "ann_dir_train = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/train\"\n",
+    "mask_dir_train = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/train\"\n",
+    "img_dir_train = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/images/train\"\n",
+    "\n",
+    "# Move validation samples to validation directories\n",
+    "for sample in val_samples:\n",
+    "\n",
+    "    # Annotations\n",
+    "    src_ann = os.path.join(ann_dir_train, f\"{sample}.json\")\n",
+    "    dst_ann = os.path.join(ann_dir_val, f\"{sample}.json\")\n",
+    "    if os.path.exists(src_ann):\n",
+    "        shutil.move(src_ann, dst_ann)\n",
+    "\n",
+    "    # Masks\n",
+    "    src_mask = os.path.join(mask_dir_train, f\"{sample}.png\")\n",
+    "    dst_mask = os.path.join(mask_dir_val, f\"{sample}.png\")\n",
+    "    if os.path.exists(src_mask):\n",
+    "        shutil.move(src_mask, dst_mask)\n",
+    "\n",
+    "    # Images\n",
+    "    src_img = os.path.join(img_dir_train, f\"{sample}.jpg\")\n",
+    "    dst_img = os.path.join(img_dir_val, f\"{sample}.jpg\")\n",
+    "    if os.path.exists(src_img):\n",
+    "        shutil.move(src_img, dst_img)\n",
+    "\n",
+    "# Integrity checks\n",
+    "ann_paths_train = [os.path.join(ann_dir_train, sp) for sp in os.listdir(ann_dir_train)]\n",
+    "mask_paths_train = [os.path.join(mask_dir_train, sp) for sp in os.listdir(mask_dir_train)]\n",
+    "img_paths_train = [os.path.join(img_dir_train, sp) for sp in os.listdir(img_dir_train)]\n",
+    "\n",
+    "ann_paths_val = [os.path.join(ann_dir_val, sp) for sp in os.listdir(ann_dir_val)]\n",
+    "mask_paths_val = [os.path.join(mask_dir_val, sp) for sp in os.listdir(mask_dir_val)]\n",
+    "img_paths_val = [os.path.join(img_dir_val, sp) for sp in os.listdir(img_dir_val)]\n",
+    "\n",
+    "# Check lengths\n",
+    "assert len(ann_paths_train) == len(mask_paths_train) == len(img_paths_train)\n",
+    "\n",
+    "# Check that all samples in train set are correct\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in train_samples for p in ann_paths_train)\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in train_samples for p in mask_paths_train)\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in train_samples for p in img_paths_train)\n",
+    "\n",
+    "# Check that all samples in validation set are correct\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in val_samples for p in ann_paths_val)\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in val_samples for p in mask_paths_val)\n",
+    "assert all(os.path.splitext(os.path.basename(p))[0] in val_samples for p in img_paths_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "07d2bf01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust names for consistency\n",
+    "def adjust_filename(path, old_str, new_str):\n",
+    "    folder = os.path.dirname(path)\n",
+    "    old_name = os.path.basename(path)\n",
+    "    new_name = old_name.replace(old_str, new_str)\n",
+    "    new_path = os.path.join(folder, new_name)\n",
+    "    os.rename(path, new_path)\n",
+    "\n",
+    "# Validation\n",
+    "for ann_path, mask_path, img_path in zip(ann_paths_val, mask_paths_val, img_paths_val):\n",
+    "    adjust_filename(ann_path, \"train\", \"validation\")\n",
+    "    adjust_filename(mask_path, \"train\", \"validation\")\n",
+    "    adjust_filename(img_path, \"train\", \"validation\")\n",
+    "\n",
+    "# Test\n",
+    "ann_dir_test = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/annotations/test\"\n",
+    "mask_dir_test = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/test\"\n",
+    "img_dir_test = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data/images/test\"\n",
+    "\n",
+    "ann_paths_test = [os.path.join(ann_dir_test, sp) for sp in os.listdir(ann_dir_test)]\n",
+    "mask_paths_test = [os.path.join(mask_dir_test, sp) for sp in os.listdir(mask_dir_test)]\n",
+    "img_paths_test = [os.path.join(img_dir_test, sp) for sp in os.listdir(img_dir_test)]\n",
+    "\n",
+    "for ann_path, mask_path, img_path in zip(ann_paths_test, mask_paths_test, img_paths_test):\n",
+    "    adjust_filename(ann_path, \"validation\", \"test\")\n",
+    "    adjust_filename(mask_path, \"validation\", \"test\")\n",
+    "    adjust_filename(img_path, \"validation\", \"test\")"
    ]
   }
  ],
