final config before moving to colab

--- a/crack_detection.ipynb
+++ b/crack_detection.ipynb
@@ -750,6 +750,50 @@
     "    adjust_filename(mask_path, \"validation\", \"test\")\n",
     "    adjust_filename(img_path, \"validation\", \"test\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "572f73c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0.0rc4\n",
+      "1.2.2\n",
+      "0.10.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mmcv, mmseg, mmengine\n",
+    "\n",
+    "print(mmcv.__version__)\n",
+    "print(mmseg.__version__)\n",
+    "print(mmengine.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6ff58b1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EncoderDecoder\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mmengine.config import Config\n",
+    "\n",
+    "print(Config.fromfile('configs/dacl10k_unet.py').model['type'])\n"
+   ]
   }
  ],
  "metadata": {
