Added UNet training notebook (trained in Kaggle)

--- a/crack_detection.ipynb
+++ b/crack_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8c28ffa2",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e2988fd4",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "49c749ac",
    "metadata": {},
    "outputs": [],
@@ -793,6 +793,41 @@
     "from mmengine.config import Config\n",
     "\n",
     "print(Config.fromfile('configs/dacl10k_unet.py').model['type'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3a92f852",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Converting to PNG: 100%|██████████| 975/975 [00:17<00:00, 55.41it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done. Wrote 975 masks to: /Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/pngs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test\n",
+    "in_ann_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/test\"\n",
+    "out_mask_dir = \"/Users/diegovelasco/Desktop/Diego/FING/DLFCV-FinalProject/data_clean/masks/pngs\"\n",
+    "batch_convert_labelme_to_png(in_ann_dir, out_mask_dir)"
    ]
   }
  ],
