--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -20,6 +20,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7443c885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 13], dtype=uint8)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using OpenCV (reads BGR)\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "img_path = \"data_clean/masks/train/dacl10k_v2_train_0000.png\"\n",
+    "img_bgr = cv2.imread(img_path, cv2.IMREAD_COLOR)   # None if not found\n",
+    "\n",
+    "np.unique(img_bgr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3286d7a0",
    "metadata": {},
