--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -289,7 +289,7 @@
    "id": "b5239c5a",
    "metadata": {},
    "source": [
-    "Because the dataset annotations are multilabel and overlap in ~3% of pixels, we collapse overlaps to a single class using a fixed priority hierarchy. This enables consistent multiclass training and evaluation for U-Net, SegFormer, and Mask2Former. A multilabel experiment will be explored separately."
+    "Because the dataset annotations are multilabel and overlap in ~3% of pixels, we collapse overlaps to a single class using a fixed priority hierarchy. This enables consistent multiclass training and evaluation for U-Net, SegFormer, and Mask2Former."
    ]
   },
   {
